# RiftMap

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  KNOWN_LIMITATIONS.md  LICENSE-MIT  README.md  README.zh-CN.md  config.example.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: CI_CD.md  OPERATIONS.md  RESULT_SCHEMA.md  ROADMAP.md  SAFETY_MODEL.md  SAMPLE_OUTPUT.md  VALIDATION.md  VALIDATION_RESULTS.md
fixtures/: targets.example.txt
schemas/: result-v1.json  summary-v1.json
scripts/: native-lab-validation.sh  netns-smoke.sh
src/: config.rs  distributed.rs  job.rs  lib.rs  main.rs  ops.rs  packet.rs  permutation.rs  protocol.rs  rate.rs  result.rs  scanner.rs  target.rs
